--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   </style>
 </head>
 <body>
-  <img src="logo.png" alt="Company Logo" class="logo" />
+  <img src="ectropa.png" alt="Company Logo" class="logo" />
   <div class="tagline">
-    Welcome to our website.<br>
-    More to come soon.
+    Una compañía familiar fundada en 2011.<br>
+    Enfocada en soluciones que perduren en el largo plazo.
   </div>
 </body>
 </html>
