--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 <body>
   <img src="ectropa.png" alt="Company Logo" class="logo" />
   <div class="tagline">
-    Una compañía familiar fundada en 2011.<br>
-    Enfocada en soluciones que perduren en el largo plazo.
+   Fundada en 2011.<br>
+
   </div>
 </body>
 </html>
