--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </style>
 </head>
 <body>
-  <img src="ectropa.png" alt="Company Logo" class="logo" />
+  <img src="ectropa-brand.png" alt="Company Logo" class="logo" />
   <div class="tagline">
    Fundada en 2011.<br>
 
