--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #F2DFCE;
+      background: #E1BD02;
       display: flex;
       flex-direction: column;
       align-items: center;
